apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <description>The async queueable job Id</description>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>