apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <description>The maximum number of retries for this task</description>
    <label>Max Retries</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>