apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/fields/TaskClassName__c.field-meta.xml
<CustomField>
    <fullName>TaskClassName__c</fullName>
    <description>The concrete class implementing this task</description>
    <label>Task Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>