apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/fields/TaskConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>TaskConfigDeveloperName__c</fullName>
    <description>The Configuration CMDT Developer Name</description>
    <label>Task Config Developer Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>