apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/fields/TaskDuration__c.field-meta.xml
<CustomField>
    <fullName>TaskDuration__c</fullName>
    <formula>(ExecutionEndDatetime__c -  ExecutionStartDatetime__c) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Duration (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>