apex-async-retryable-tasks/force-app/main/default/objects/AsyncRetryableTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IdempotencyKey__c</columns>
    <columns>TaskClassName__c</columns>
    <columns>Status__c</columns>
    <columns>ExecutionStartDatetime__c</columns>
    <columns>ExecutionEndDatetime__c</columns>
    <columns>SerializedParameters__c</columns>
    <columns>TaskDuration__c</columns>
    <columns>MaxRetries__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>